--- a/style.css
+++ b/style.css
@@ -2,5 +2,10 @@ html {
   font-family: Arial,sans-serif;
 }
 body {
-  margin: 3em;
+  margin: 1em;
+}
+@media only screen and (min-width:600px) {
+  body {
+    margin: 3em;
+  }
 }
