--- a/style.css
+++ b/style.css
@@ -3,11 +3,19 @@ html {
   line-height: 1.4;
 }
 body {
-  margin: 1.25em;
+  margin: 1.1em;
 }
 header, main, footer {
   max-width: 50em;
   margin: auto;
+}
+figure {
+  text-align: center;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+}
+footer {
+  border-top: 1px solid #ddd;
 }
 .flex-container {
   display: flex;
@@ -15,8 +23,15 @@ header, main, footer {
   justify-content: center;
 }
 .flex-item-left {
-  flex: 60%;
+  flex: 65%;
 }
 .flex-item-right{
-  flex: 40%;
+  flex: 35%;
+}
+#home a {
+  text-decoration: none;
+  color: black;
+}
+#home a:hover {
+  opacity: .66;
 }
